--- a/Dashboard/Areas/AppInfoEntity/Views/AppAbout/Details.cshtml
+++ b/Dashboard/Areas/AppInfoEntity/Views/AppAbout/Details.cshtml
@@ -47,7 +47,7 @@
 
                                         <div class="col-md-12 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("AboutCompany")} {Localizer.Get("App")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("AboutCompany")}"): </label> 
                                                 @Html.Raw(Model.AboutCompany)
                                             </div>
                                         </div>
@@ -55,42 +55,42 @@
 
                                           <div class="col-md-12 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("AboutApp")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("AboutApp")}"): </label>
                                                 @Html.Raw(Model.AboutApp)
                                             </div>
                                         </div>
 
                                           <div class="col-md-12 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("TermsAndConditions")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("TermsAndConditions")}"): </label>
                                                 @Html.Raw(Model.TermsAndConditions)
                                             </div>
                                         </div>
 
                                           <div class="col-md-12 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("QuestionsAndAnswer")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("QuestionsAndAnswer")}"): </label>
                                                 @Html.Raw(Model.QuestionsAndAnswer)
                                             </div>
                                         </div>
 
                                         <div class="col-md-12 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("GameRules")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("GameRules")}"): </label>
                                                 @Html.Raw(Model.GameRules)
                                             </div>
                                         </div>
 
                                          <div class="col-md-12 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("Subscriptions")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("Subscriptions")}"): </label>
                                                 @Html.Raw(Model.Subscriptions)
                                             </div>
                                         </div>
 
                                          <div class="col-md-12 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("Prizes")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("Prizes")}"): </label>
                                                 @Html.Raw(Model.Prizes)
                                             </div>
                                         </div>
