--- a/Dashboard/Areas/Location/Views/Country/Details.cshtml
+++ b/Dashboard/Areas/Location/Views/Country/Details.cshtml
@@ -9,7 +9,12 @@
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 <div class="modal-body">
-    
+    <div class="d-flex">
+        <a href="#" class="me-25">
+            <img src="@($"{Model.ImageUrl}")" id="account-upload-img" class="uploadedAvatar rounded me-50" height="100" width="100">
+        </a>
+    </div>
+    <br />
     <div class="row">
         <div class="col-xl-7 col-12">
             <dl class="row mb-0">
