--- a/Dashboard/Areas/AccountEntity/Views/Account/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/CreateOrEdit.cshtml
@@ -69,7 +69,7 @@
 
                                     <div class="row mb-1">
 
-                                        <div class="col-md-12 col-12 d-none">
+                                        <div class="col-md-12 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="User.Name" class="form-label d-none"></label>
                                                 <input asp-for="User.Name" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get("Name"))" />
@@ -122,6 +122,7 @@
                                                 <span asp-validation-for="Account.LastName" class="text-danger"></span>
                                             </div>
                                         </div>
+                                        
                                  
                                         <div class="col-md-6 col-12">
                                             <div class="mb-1">
@@ -191,11 +192,3 @@
 
     </div>
 </div>
-<!-- END: Content-->
-@section scripts{
-<script>
-    $('form').submit(function () {
-        $("#User_Name").val($("#Account_FirstName").val() + " " + $("#Account_LastName").val());
-    });
-</script>
-}
