--- a/Dashboard/Areas/AppInfoEntity/Views/AppAbout/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/AppInfoEntity/Views/AppAbout/CreateOrEdit.cshtml
@@ -45,7 +45,7 @@
                                     <div class="row">
                                         <div class="col-md-6 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("About")} {Localizer.Get("Company")} {Localizer.Get("InArabic")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("AboutCompany")} {Localizer.Get("InArabic")}")</label>
                                                 <textarea rows="5" asp-for="AboutCompany" class="form-control summernote"></textarea>
                                                 <span asp-validation-for="AboutCompany" class="text-danger"></span>
                                             </div>
@@ -55,7 +55,7 @@
 
                                         <div class="col-md-6 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("About")} {Localizer.Get("Company")} {Localizer.Get("InEnglish")}")</label>
+                                                <label class="form-label">@($"{Localizer.Get("AboutCompany")} {Localizer.Get("InEnglish")}")</label>
                                                 <textarea rows="5" asp-for="AppAboutLang.AboutCompany" class="form-control summernote"></textarea>
                                                 <span asp-validation-for="AppAboutLang.AboutCompany" class="text-danger"></span>
                                             </div>
@@ -63,7 +63,7 @@
 
                                         <div class="col-md-6 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("About")} {Localizer.Get("App")} {Localizer.Get("InArabic")} ")</label>
+                                                <label class="form-label">@($"{Localizer.Get("AboutApp")}  {Localizer.Get("InArabic")} ")</label>
                                                 <textarea rows="5" asp-for="AboutApp" class="form-control summernote"></textarea>
                                                 <span asp-validation-for="AboutApp" class="text-danger"></span>
                                             </div>
@@ -71,7 +71,7 @@
 
                                         <div class="col-md-6 col-12">
                                             <div class="mb-1">
-                                                <label class="form-label">@($"{Localizer.Get("About")} {Localizer.Get("App")} {Localizer.Get("InEnglish")} ")</label>
+                                                <label class="form-label">@($"{Localizer.Get("AboutApp")} {Localizer.Get("InEnglish")} ")</label>
                                                 <textarea rows="5" asp-for="AppAboutLang.AboutApp" class="form-control summernote"></textarea>
                                                 <span asp-validation-for="AppAboutLang.AboutApp" class="text-danger"></span>
                                             </div>
