--- a/Dashboard/Areas/Location/Views/Country/Index.cshtml
+++ b/Dashboard/Areas/Location/Views/Country/Index.cshtml
@@ -108,8 +108,36 @@
                 // Columns Setups
                 columns: [
                    {data:"id"},
-                   {data:"name"},
-                   {data:"createdAt"},
+                        {
+                            data: "name",
+                            render: function (data, type, row) {
+                                var span = '';
+
+                                if (row.imageUrl != null) {
+
+                                    return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" ><div class="avatar me-1">'
+                                        + '<img src="' + row.imageUrl + '"  height="32" width="32">'
+                                        + span
+                                        + '</div></div>'
+                                        + ' <div class= "d-flex flex-column">'
+                                        + '<a href="/AccountEntity/Account/Profile/' + row.id + '" class= "user_name text-truncate">'
+                                        + '<span class= "fw-bolder">' + data + '</span></a> '
+                                        + '<small class= "emp_post text-muted" ></small ></div></div>';
+                                }
+                                else {
+                                    return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" >'
+                                        + '<div class="avatar  bg-light-dark  me-1"><span class="avatar-content"></span>' + span + '</div>'
+                                        + '</div>'
+                                        + ' <div class= "d-flex flex-column">'
+                                        + '<a href="/AccountEntity/Account/Profile/' + row.id + '" class= "user_name text-truncate">'
+                                        + '<span class= "fw-bolder">' + data + '</span></a> '
+                                        + '<small class= "emp_post text-muted" ></small ></div></div>';
+                                }
+
+
+                            }
+                        },
+                        { data: "createdAt" },
                    {data:"id"},
                 ]
             });
