--- a/Dashboard/Areas/Location/Views/Country/Index.cshtml
+++ b/Dashboard/Areas/Location/Views/Country/Index.cshtml
@@ -120,7 +120,7 @@
                                         + span
                                         + '</div></div>'
                                         + ' <div class= "d-flex flex-column">'
-                                        + '<a href="/AccountEntity/Account/Profile/' + row.id + '" class= "user_name text-truncate">'
+                                        + '<a href="#" class= "user_name text-truncate">'
                                         + '<span class= "fw-bolder">' + data + '</span></a> '
                                         + '<small class= "emp_post text-muted" ></small ></div></div>';
                                 }
@@ -129,7 +129,7 @@
                                         + '<div class="avatar  bg-light-dark  me-1"><span class="avatar-content"></span>' + span + '</div>'
                                         + '</div>'
                                         + ' <div class= "d-flex flex-column">'
-                                        + '<a href="/AccountEntity/Account/Profile/' + row.id + '" class= "user_name text-truncate">'
+                                        + '<a href="#" class= "user_name text-truncate">'
                                         + '<span class= "fw-bolder">' + data + '</span></a> '
                                         + '<small class= "emp_post text-muted" ></small ></div></div>';
                                 }
