--- a/Dashboard/Views/Shared/_menu.cshtml
+++ b/Dashboard/Views/Shared/_menu.cshtml
@@ -63,7 +63,7 @@
                     </a>
                 </li>
             }
-             @if (viewList.Contains((int)DashboardViewEnum.Team))
+            @if (viewList.Contains((int)DashboardViewEnum.Team))
             {
                 <li id="TeamList" class="@(active ==DashboardViewEnum.Team.ToString()?"active":"") nav-item">
                     <a class="d-flex align-items-center"
@@ -76,7 +76,7 @@
                     </a>
                 </li>
             }
-              @if (viewList.Contains((int)DashboardViewEnum.Player))
+            @if (viewList.Contains((int)DashboardViewEnum.Player))
             {
                 <li id="PlayerList" class="@(active ==DashboardViewEnum.Player.ToString()?"active":"") nav-item">
                     <a class="d-flex align-items-center"
@@ -89,7 +89,46 @@
                     </a>
                 </li>
             }
-             @if (viewList.Contains((int)DashboardViewEnum.Sponsor))
+               @if (viewList.Contains((int)DashboardViewEnum.Season))
+            {
+                <li id="SeasonList" class="@(active ==DashboardViewEnum.Season.ToString()?"active":"") nav-item">
+                    <a class="d-flex align-items-center"
+                   asp-action="Index" asp-area="SeasonEntity"
+                   asp-controller="Season">
+                        <i data-feather='calendar'></i>
+                        <span class="menu-title text-truncate">
+                            @Localizer.Get("Seasons")
+                        </span>
+                    </a>
+                </li>
+            }
+                 @if (viewList.Contains((int)DashboardViewEnum.TeamGameWeak))
+            {
+                <li id="TeamGameWeakList" class="@(active ==DashboardViewEnum.TeamGameWeak.ToString()?"active":"") nav-item">
+                    <a class="d-flex align-items-center"
+                   asp-action="Index" asp-area="SeasonEntity"
+                   asp-controller="TeamGameWeak">
+                        <i data-feather='flag'></i>
+                        <span class="menu-title text-truncate">
+                            @Localizer.Get("TeamGameWeaks")
+                        </span>
+                    </a>
+                </li>
+            }
+            @if (viewList.Contains((int)DashboardViewEnum.PrivateLeagueMember))
+            {
+                <li id="PrivateLeagueMemberList" class="@(active ==DashboardViewEnum.PrivateLeagueMember.ToString()?"active":"") nav-item">
+                    <a class="d-flex align-items-center"
+                   asp-action="Index" asp-area="PrivateLeagueEntity"
+                   asp-controller="PrivateLeagueMember">
+                        <i data-feather='shield'></i>
+                        <span class="menu-title text-truncate">
+                            @Localizer.Get("PrivateLeagueMembers")
+                        </span>
+                    </a>
+                </li>
+            }
+            @if (viewList.Contains((int)DashboardViewEnum.Sponsor))
             {
                 <li id="SponsorList" class="@(active ==DashboardViewEnum.Sponsor.ToString()?"active":"") nav-item">
                     <a class="d-flex align-items-center"
@@ -102,7 +141,7 @@
                     </a>
                 </li>
             }
-              @if (viewList.Contains((int)DashboardViewEnum.News))
+            @if (viewList.Contains((int)DashboardViewEnum.News))
             {
                 <li id="NewsList" class="@(active ==DashboardViewEnum.News.ToString()?"active":"") nav-item">
                     <a class="d-flex align-items-center"
@@ -129,7 +168,7 @@
                     </a>
                 </li>
             }
-          
+
             @if (viewList.Contains((int)DashboardViewEnum.DBLogs))
             {
                 <li class="@(active ==DashboardViewEnum.DBLogs.ToString()?"active":"") nav-item">
@@ -152,7 +191,7 @@
             {
                 <li class=" nav-item">
                     <a class="d-flex align-items-center" href="#">
-                        <i data-feather='flag'></i><span class="menu-title text-truncate" data-i18n="Menu Levels">@Localizer.Get("App Info")</span>
+                        <i data-feather='info'></i><span class="menu-title text-truncate" data-i18n="Menu Levels">@Localizer.Get("App Info")</span>
                     </a>
                     <ul class="menu-content">
 
@@ -165,7 +204,7 @@
                             </li>
                         }
 
-               
+
 
                     </ul>
                 </li>
@@ -180,9 +219,9 @@
                     </a>
                     <ul class="menu-content">
 
-                       
 
-                          @if (viewList.Contains((int)DashboardViewEnum.Country))
+
+                        @if (viewList.Contains((int)DashboardViewEnum.Country))
                         {
                             <li class="@(active == DashboardViewEnum.Country.ToString()?"active":"")">
                                 <a class="d-flex align-items-center" asp-controller="Country" asp-area="Location" asp-action="Index">
@@ -195,7 +234,7 @@
                 </li>
             }
 
-                        @if (viewList.Contains((int)DashboardViewEnum.PlayerPosition))
+            @if (viewList.Contains((int)DashboardViewEnum.PlayerPosition))
             {
                 <li class=" nav-item">
                     <a class="d-flex align-items-center" href="#">
@@ -203,9 +242,9 @@
                     </a>
                     <ul class="menu-content">
 
-                       
 
-                          @if (viewList.Contains((int)DashboardViewEnum.PlayerPosition))
+
+                        @if (viewList.Contains((int)DashboardViewEnum.PlayerPosition))
                         {
                             <li class="@(active == DashboardViewEnum.PlayerPosition.ToString()?"active":"")">
                                 <a class="d-flex align-items-center" asp-controller="PlayerPosition" asp-area="TeamEntity" asp-action="Index">
@@ -218,7 +257,75 @@
                 </li>
             }
 
-          
+            @if (viewList.Contains((int)DashboardViewEnum.PrivateLeague))
+            {
+                <li class=" nav-item">
+                    <a class="d-flex align-items-center" href="#">
+                      <i data-feather='shield'></i><span class="menu-title text-truncate" data-i18n="Menu Levels">@Localizer.Get("PrivateLeague Data")</span>
+                    </a>
+                    <ul class="menu-content">
+
+
+
+                        @if (viewList.Contains((int)DashboardViewEnum.PrivateLeague))
+                        {
+                            <li class="@(active == DashboardViewEnum.PrivateLeague.ToString()?"active":"")">
+                                <a class="d-flex align-items-center" asp-controller="PrivateLeague" asp-area="PrivateLeagueEntity" asp-action="Index">
+                                    <i data-feather='settings'></i><span class="menu-item text-truncate" data-i18n="Second Level">@Localizer.Get("PrivateLeagues")</span>
+                                </a>
+                            </li>
+                        }
+
+                    </ul>
+                </li>
+            }
+
+            @if (viewList.Contains((int)DashboardViewEnum.TeamPlayerType))
+            {
+                <li class=" nav-item">
+                    <a class="d-flex align-items-center" href="#">
+                        <i data-feather='flag'></i><span class="menu-title text-truncate" data-i18n="Menu Levels">@Localizer.Get("AccountTeam Data")</span>
+                    </a>
+                    <ul class="menu-content">
+
+
+
+                        @if (viewList.Contains((int)DashboardViewEnum.TeamPlayerType))
+                        {
+                            <li class="@(active == DashboardViewEnum.TeamPlayerType.ToString()?"active":"")">
+                                <a class="d-flex align-items-center" asp-controller="TeamPlayerType" asp-area="AccountTeamEntity" asp-action="Index">
+                                    <i data-feather='settings'></i><span class="menu-item text-truncate" data-i18n="Second Level">@Localizer.Get("TeamPlayerTypes")</span>
+                                </a>
+                            </li>
+                        }
+
+                    </ul>
+                </li>
+            }
+
+                        @if (viewList.Contains((int)DashboardViewEnum.ScoreType))
+            {
+                <li class=" nav-item">
+                    <a class="d-flex align-items-center" href="#">
+                        <i data-feather='flag'></i><span class="menu-title text-truncate" data-i18n="Menu Levels">@Localizer.Get("PlayerScore Data")</span>
+                    </a>
+                    <ul class="menu-content">
+
+
+
+                        @if (viewList.Contains((int)DashboardViewEnum.ScoreType))
+                        {
+                            <li class="@(active == DashboardViewEnum.ScoreType.ToString()?"active":"")">
+                                <a class="d-flex align-items-center" asp-controller="ScoreType" asp-area="PlayerScoreEntity" asp-action="Index">
+                                    <i data-feather='settings'></i><span class="menu-item text-truncate" data-i18n="Second Level">@Localizer.Get("ScoreTypes")</span>
+                                </a>
+                            </li>
+                        }
+
+                    </ul>
+                </li>
+            }
+
             @if (viewList.Contains((int)DashboardViewEnum.DashboardAdministrator))
             {
                 <li class=" navigation-header">
