--- a/Dashboard/Areas/StandingsEntity/Views/_ViewImports.cshtml
+++ b/Dashboard/Areas/StandingsEntity/Views/_ViewImports.cshtml
@@ -4,11 +4,10 @@
 @using System.Globalization;
 @using Contracts.Constants;
 @using Entities.Constants;
-@using Dashboard.Areas.PlayerScoreEntity.Models;
-@using Dashboard.Areas.TeamEntity.Models;
+@using Dashboard.Areas.StandingsEntity.Models;
 @using Dashboard.Areas.Dashboard.Models;
-@using Entities.DBModels.PlayerScoreModels;
-@using Entities.CoreServicesModels.PlayerScoreModels;
+@using Entities.DBModels.StandingsModels;
+@using Entities.CoreServicesModels.StandingsModels;
 @using static Contracts.EnumData.DashboardModelsEnum;
 @using static Contracts.EnumData.DBModelsEnum;
 @using Entities.CoreServicesModels.DashboardAdministrationModels;
