--- a/Dashboard/Views/Shared/_scripts.cshtml
+++ b/Dashboard/Views/Shared/_scripts.cshtml
@@ -8,12 +8,13 @@
 
 
 <!-- BEGIN Vendor JS-->
-@if ((ViewBag.useForm != null && ViewBag.useForm) ||
+@if (((ViewBag.useForm != null && ViewBag.useForm) ||
            (ViewBag.useCharts != null && ViewBag.useCharts) ||
-            (ViewBag.useDatePicker != null && ViewBag.useDatePicker))
+            (ViewBag.useDatePicker != null && ViewBag.useDatePicker)) &&
+ (ViewBag.emptyLayout == null || !ViewBag.emptyLayout))
 {
+    
     <script src="~/app-assets/vendors/js/jquery/jquery.min.js"></script>
-
 
 }
 
