--- a/Dashboard/Areas/Location/Views/Country/Index.cshtml
+++ b/Dashboard/Areas/Location/Views/Country/Index.cshtml
@@ -71,6 +71,8 @@
                                                 }
                                             </th>
                                             <th>@Html.DisplayNameFor(model => row.Name)</th>
+                                            <th>@Html.DisplayNameFor(model => row.AccountsCount)</th>
+                                            <th>@Html.DisplayNameFor(model => row.NationalitiesCount)</th>
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
                                             <th>
                                                 @Html.DisplayNameFor(model => row.Id)
@@ -89,7 +91,7 @@
 </div>
 <!-- END: Content-->
 @section scripts{
-<script>
+    <script>
     $(function () {
         var dt_ajax_table = $('.datatables');
         if (dt_ajax_table.length) {
@@ -108,40 +110,42 @@
                 // Columns Setups
                 columns: [
                    {data:"id"},
-                        {
-                            data: "name",
-                            render: function (data, type, row) {
-                                var span = '';
+                   {
+                       data: "name",
+                       render: function (data, type, row) {
+                           var span = '';
 
-                                if (row.imageUrl != null) {
+                           if (row.imageUrl != null) {
 
-                                    return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" ><div class="avatar me-1">'
-                                        + '<img src="' + row.imageUrl + '"  height="32" width="32">'
-                                        + span
-                                        + '</div></div>'
-                                        + ' <div class= "d-flex flex-column">'
-                                        + '<a href="#" class= "user_name text-truncate">'
-                                        + '<span class= "fw-bolder">' + data + '</span></a> '
-                                        + '<small class= "emp_post text-muted" ></small ></div></div>';
-                                }
-                                else {
-                                    return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" >'
-                                        + '<div class="avatar  bg-light-dark  me-1"><span class="avatar-content"></span>' + span + '</div>'
-                                        + '</div>'
-                                        + ' <div class= "d-flex flex-column">'
-                                        + '<a href="#" class= "user_name text-truncate">'
-                                        + '<span class= "fw-bolder">' + data + '</span></a> '
-                                        + '<small class= "emp_post text-muted" ></small ></div></div>';
-                                }
+                               return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" ><div class="avatar me-1">'
+                                   + '<img src="' + row.imageUrl + '"  height="32" width="32">'
+                                   + span
+                                   + '</div></div>'
+                                   + ' <div class= "d-flex flex-column">'
+                                   + '<a href="#" class= "user_name text-truncate">'
+                                   + '<span class= "fw-bolder">' + data + '</span></a> '
+                                   + '<small class= "emp_post text-muted" ></small ></div></div>';
+                           }
+                           else {
+                               return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" >'
+                                   + '<div class="avatar  bg-light-dark  me-1"><span class="avatar-content"></span>' + span + '</div>'
+                                   + '</div>'
+                                   + ' <div class= "d-flex flex-column">'
+                                   + '<a href="#" class= "user_name text-truncate">'
+                                   + '<span class= "fw-bolder">' + data + '</span></a> '
+                                   + '<small class= "emp_post text-muted" ></small ></div></div>';
+                           }
 
 
-                            }
-                        },
-                        { data: "createdAt" },
+                       }
+                   },
+                    { data: "accountsCount" },
+                    { data: "nationalitiesCount" },
+                    { data: "createdAt" },
                    {data:"id"},
                 ]
             });
         }
     });
-</script>
+    </script>
 }
