--- a/Dashboard/Areas/PlayerScoreEntity/Views/ScoreType/Index.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/ScoreType/Index.cshtml
@@ -54,7 +54,7 @@
                                 <h4 class="card-title"> @ViewData["Title"]</h4>
 
                             </div>
-                       
+
                             <div class="card-datatable">
                                 <table class="datatables datatables-ajax table table-responsive table">
                                     <thead>
@@ -84,6 +84,7 @@
 
                                             </th>
                                             <th>@Html.DisplayNameFor(model => row.Name)</th>
+                                            <th>@Html.DisplayNameFor(model => row._365_TypeId)</th>
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
                                             <th>
                                                 @Html.DisplayNameFor(model => row.Id)
@@ -105,7 +106,7 @@
 @section scripts{
     <script src="~/apis/charts.js"></script>
     <script>
-        
+
         function LoadTable() {
             var dt_ajax_table = $('.datatables');
             if (dt_ajax_table.length) {
@@ -117,7 +118,7 @@
                         contentType: "application/json",
                         dataType: "json",
                         data: function(data) {
-                          
+
                             return JSON.stringify(data);
                         }
                     },
@@ -125,6 +126,7 @@
                     columns: [
                         { data: "id" },
                         { data: "name" },
+                        { data: "_365_TypeId" },
                         { data: "createdAt" },
                         { data: "id" },
                     ]
@@ -147,7 +149,7 @@
 
         $(document).ready(function() {
             LoadTable();
-         
+
         });
     </script>
 }
