--- a/Dashboard/Areas/TeamEntity/Views/Team/Index.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Team/Index.cshtml
@@ -84,6 +84,7 @@
 
                                             </th>
                                             <th>@Html.DisplayNameFor(model => row.Name)</th>
+                                            <th>@Html.DisplayNameFor(model => row._365_TeamId)</th>
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
                                             <th>
                                                 @Html.DisplayNameFor(model => row.Id)
@@ -153,7 +154,7 @@
 
                             }
                         },
-                      
+                        { data: "_365_TeamId" },
                         { data: "createdAt" },
                         { data: "id" },
                     ]
