--- a/Dashboard/Areas/AccountEntity/Views/Account/Profile.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Profile.cshtml
@@ -66,8 +66,13 @@
                                                         <span class="fw-bold">@Localizer.Get("Account Details")</span>
                                                     </a>
                                                 </li>
-                                               
-                                            
+                                                    <li class="nav-item ">
+                                                        <a id="/AccountTeamEntity/AccountTeam/Index/?Fk_Account@Model.Id&ProfileLayOut=true" class="nav-link tab-item  @(returnItem==(int)AccountProfileItems.AccountTeam ? "active" : "")">
+                                                            <span class="fw-bold">@Localizer.Get("AccountTeams")</span>
+                                                        </a>
+                                                    </li>
+
+
 
 
                                             </ul>
