--- a/Dashboard/Areas/AccountTeamEntity/Views/_ViewImports.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/_ViewImports.cshtml
@@ -5,8 +5,10 @@
 @using Contracts.Constants;
 @using Entities.Constants;
 @using Dashboard.Areas.AccountTeamEntity.Models;
+@using Dashboard.Areas.PlayerTransferEntity.Models;
 @using Dashboard.Areas.Dashboard.Models;
 @using Entities.DBModels.AccountTeamModels;
+@using Entities.CoreServicesModels.PlayerTransfersModels;
 @using Entities.CoreServicesModels.AccountTeamModels;
 @using static Contracts.EnumData.DashboardModelsEnum;
 @using static Contracts.EnumData.DBModelsEnum;
